<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.zybooks.ferryapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_ferry_tickets"
        android:textAlignment="center"
        android:layout_marginStart="68dp"
        android:layout_marginTop="1dp"
        android:textSize="@dimen/car_ferry_tickets_size"
        style="@style/car_ferry_tickets"/>

    <ImageView
        android:id="@+id/ferryImage"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:src="@drawable/ferry_drawable"
        android:contentDescription="@string/img_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/number_of_tickets"
        android:textSize="@dimen/label_text_size"
        android:labelFor="@id/tickets_text_field"
        style="@style/numOfTickets"/>

    <EditText
        android:id="@+id/tickets_text_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColorHint="#757575"
        tools:ignore="TouchTargetSizeCheck">
        <!--Condition complete: use hint property-->
    </EditText>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="SpeakableTextPresentCheck"></Spinner>

    <TextView
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    </TextView>

    <TextView
        android:id="@+id/ticket_total_cost"
        android:text="@string/total_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/calc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick"
        android:text="@string/calculate"
        android:textColor="@color/gray"
        style="@style/CalcButton"/>
</LinearLayout>